--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
   "name": "cent-web-dev-w21",
-  "version": "1.0.0",
-  "description": "code examples for web development",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tu-lil/cent-web-dev-w21.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/tu-lil/cent-web-dev-w21/issues"
-  },
-  "homepage": "https://github.com/tu-lil/cent-web-dev-w21#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "ejs": "~2.6.1",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1"
   }
 }
