--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "node ./server.js"
   },
   "engines": {
-    "node": "15.8.0",
-    "npm": "7.5.2"
+    "node": "^14.15.4",
+    "npm": "^7.5.2"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.2",
