--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./server.js"
   },
-  "main": "server.js",
+  "main": "app.js",
   "engines": {
     "node": "^14.15.4",
     "npm": "^7.5.2"
