--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "private": false,
   "scripts": {
-    "start": "node ./server.js"
+    "start": "node ./server.js",
+    "test": "",
+    "build": ""
   },
   "main": "index.js",
   "author": "ooo ooo",
