--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "start": "node ./server.js"
   },
-  "main": "index.js",
+  "main": "server.js",
   "author": "ooo ooo",
   "engines": {
-    "node": "^14.15.4"
+    "node": "^14.15.4",
+    "npm": "^6.14.10"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.2",
@@ -20,10 +21,11 @@
     "http-errors": "~1.6.3",
     "jquery": "^3.5.1",
     "morgan": "~1.9.1",
-    "popper": "^1.0.1"
+    "npm": "^6.14.10",
+    "popper": "^1.0.1",
+    "popper.js": "^1.16.1"
   },
   "description": "sample app for portfolio website",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tu-lil/cent-web-dev-w21.git"
