--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web-app-w21-a1",
   "version": "0.0.1",
-  "private": false,
+  "private": true,
   "scripts": {
     "start": "node ./server.js"
   },
