--- a/package.json
+++ b/package.json
@@ -14,15 +14,23 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.2",
     "bootstrap": "^4.6.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
     "jquery": "^3.5.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
     "morgan": "~1.9.1",
     "npm": "^6.14.10",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1"
   },
@@ -35,5 +43,17 @@
   "bugs": {
     "url": "https://github.com/tu-lil/cent-web-dev-w21/issues"
   },
-  "homepage": "https://github.com/tu-lil/cent-web-dev-w21#readme"
+  "homepage": "https://github.com/tu-lil/cent-web-dev-w21#readme",
+  "devDependencies": {
+    "@types/connect-flash": "^0.0.36",
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.11",
+    "@types/express-session": "^1.17.3",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongoose": "^5.10.3",
+    "@types/passport": "^1.0.6",
+    "@types/passport-jwt": "^3.0.5",
+    "@types/passport-local": "^1.0.33",
+    "@types/passport-local-mongoose": "^4.0.13"
+  }
 }
