--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "npm": "^6.14.10"
   },
   "dependencies": {
+    "@angular/cli": "^10.0.0",
     "@fortawesome/fontawesome-free": "^5.15.2",
     "bootstrap": "^4.6.0",
     "connect-flash": "^0.1.1",
