--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web-app-w21-a2",
   "version": "1.0.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "start": "node ./server.js"
   },
